syntax = "proto3";

package Yahtzee;
option java_package = "Yahtzee.service";


service AuthenticateService {
  rpc getUser(Username) returns (User);
  rpc createUser(User) returns (Username);
  rpc getPassword(Username) returns (Password);
  rpc setPassword(Password) returns (Username);
}

service serveClient {
  rpc verifyPassword(Password) returns (Valid);
  rpc createUser(User) returns (Username);
  rpc setPassword(Password) returns (Valid);
}
message Username{
  string username = 1;
  bool exists = 2;
}

message Password{
  string username = 1;
  string password = 2;
  string salt = 3;
  bool exists = 4;
  string newPassword=5;
}

message User {
  string username = 1;
  string password = 2;
  string salt = 3;
  int32 lastScore = 4;
  int32 highScore = 5;
  string name = 6;
  string lastName = 7;
  string email = 8;
  bool exists =9;
  
}

message Valid{
  string username = 1;
  bool exists = 2;
  bool valid = 3;
}


message EmptyRequest {}
